clusters/home/core/cockroachdb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cockroachdb-operator-system
