clusters/home/core/longhorn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
