clusters/home/core/mariadb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mariadb-operator
