clusters/home/core/tekton.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-pipelines
