clusters/home/core/traefikk.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
