clusters/home/core/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-external

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all
  namespace: traefik-external
spec:
  podSelector: {}
  ingress:
  - from:
    # Allow all ingress (K8S ingress)
    - ipBlock:
        cidr: "0.0.0.0/0"
  egress:
  - to:
    # Allow egress to Internet (oauth)
    - ipBlock:
        cidr: "0.0.0.0/0"
  policyTypes:
    - Ingress
    - Egress
